test/fail/hex_punc01.v3
//@parse
class hex_punc01 {
	var d: int = 0x0345;
	var e: int = 0x0.6789;
	var f: int = 0x0a.bcde;
	var f: int = 0x0ff.ffff;
	var f: int = 0xffff.ffff;
}
